# langgraph-agentic-ai

./: .env  .gitignore  1_simple_graph.ipynb  2_simple_graph_with_condition.ipynb  3_chatbot.ipynb  4_tool_call.ipynb  6_stock_agent_with_tools_and_memory.ipynb  7_langsmith.ipynb  8_humon_in_the_loop_with_memory.py  README.md  Siko Power.py  Siko PowerV6.py  Siko SatV6.2.py  Siko Tue3-1.py  Siko Tue4-1.py  Siko Tue4-2.py  Siko Tue5.py  Siko Tuev5.2.py  Siko Tuev6.1 hard hot cold.py  Siko_CoreV6_3.py  Siko_PowerV6_3.py  Siko_SatV6_3.py  Siko_TueV6_3.py  all_diagnostics_optionA.json  chatbot_multiple_tools.py  logs.txt  logs1.txt  results_summary.json  sat.py  tue.py
Pydantic/: Sike Tue3.py  Siko Power4-2.py  Siko PowerPowerballV6.py  Siko SatV6.py  Siko Tue3-2.py  Siko TueV5.1.py  Siko Tuev6.py  Siko_PowerPowerballV6_3.py  pyproject.toml  sat3.py  tue original.py
Siko_V3/: Tattslotto_org.csv
Single_V2_0/: 19thApril - 4 hits  19thApril4HitsByManualConfig.py  19thApril4HitsByManualConfigV2.py  19thApril4HitsByManualConfigV2_6tickets_hits_3.py  19thApril4HitsPattern.py  Decades.py  Oz_Lotto_org.csv  Oz_Lotto_transformed.csv  Powerball.csv  Siko G instruction  Siko_PB.py  Siko_PB_Only.py  Siko_Power.py  Siko_Power_Sat.py  Siko_Power_single.py  Siko_Sat.py  Siko_Sat_5_hit.py  Siko_Sat_Copy.py  Siko_Sat_Decades.py  Siko_Sat_G  Siko_Sat_org.py  Siko_Sat_single_5_hit.py  Siko_Sat_single_5_hit_Copy_Readonly.py  Siko_Tue_single.py  Siko_Tue_single_3_hit.py  Siko_Tue_single_3_hit_readonly.py  Siko_Tue_single_4_hit_twice_bit_fast.py  Siko_Tue_single_4_hit_twice_slow.py  (+20 more)
(+94 files in other folders)
